[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dual-mc33926"
version = "0.0.1"
authors = [
  { name="", email="" },
]
description = "Library for the Pololu Dual MC33926 Motor using pigpio"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'pigpio',
]

[project.urls]
"Homepage" = "https://github.com/Clam-/dual-mc33926"
"Bug Tracker" = "https://github.com/Clam-/dual-mc33926/issues"
